[package]
name = "rust-duplicate-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
colored = "2.0.0"
data-encoding = "2.3.3"
dict = "0.1.5"
glob = "0.3.1"
ring = "0.16.20"
walkdir = "2.3.3"
